Add Tuna Salad and Fish Tacos to the Recipe Menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <h1>Odin-recipes</h1>
     <br/>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <h2>Menu</h2>
+    <p>
+    <ul>
+    <a href="./recipes/lasagna.html">Lasagna</a><br>
+    <a href="./recipes/TunaSalad.html">Quick Tuna Salad</a><br>
+    <a href="./recipes/Fish_Tacos.html">Fish Tacos</a>
+</ul>
+</p>
 </body>
 </html>
