Fix Lasagna image and Add directions and ingredient to Fish Tacos
Lasagna image was broken after image directory restructuring. This
commit will fix it.

Fish tacos recipe ingredient and directions is added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <h1>Odin-recipes</h1>
     <br/>
     <h2>Menu</h2>
-    <p>
     <ul>
-    <a href="./recipes/lasagna.html">Lasagna</a><br>
-    <a href="./recipes/TunaSalad.html">Quick Tuna Salad</a><br>
-    <a href="./recipes/Fish_Tacos.html">Fish Tacos</a>
-</ul>
-</p>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/TunaSalad.html">Quick Tuna Salad</a></li>
+        <li><a href="./recipes/Fish_Tacos.html">Fish Tacos</a></li>
+    </ul>
 </body>
 </html>
