--- a/recipes/Fish_Tacos.html
+++ b/recipes/Fish_Tacos.html
@@ -6,6 +6,40 @@
     <title>Fish Tacos</title>
 </head>
 <body>
-    
+    <h1>Fish Tacos</h1>
+    <p>This simple yet scrumptious recipe has a nice kick and is a house favorite. Delicious!</p>
+    <img src="./../images/Fish_Tacos/Fish_taco_Main">
+    <h2>How to make Fish_Tacos</h2>
+    <h2>Ingredient List</h2>
+    <ul>
+        <li><strong>Sour Cream:</strong>¼ cup reduced-fat sour cream</li>
+        <li><strong>Lime Juice:</strong>2 tablespoons</li>
+        <li><strong>Salt and ground Black Pepper:</strong>to taste</li>
+        <li><strong>Jalapeno pepper</strong>1 halved lengthwise</li>
+        <li><strong>Red Cabbage:</strong>2 ½ cups shredded</li>
+        <li><strong>Green Onions:</strong>4 thinly sliced</li>
+        <li><strong>Olive oil:</strong>2 tablespoons </li>
+        <li><strong>tilapia fillets:</strong>1 pound, cut into strips</li>
+        <li><strong>Flour tortillas:</strong>8(6 inch)</li>
+        <li><strong>Fresh Cilantro:</strong>½ cup chopped </li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Gather all ingredients<br/>
+            <img src="./../images/Fish_Tacos/FT_Gather">
+        </li>
+        <li>Mix sour cream and lime juice together in a large bowl; season with salt and black pepper. Reserve about half the mixture in another bowl for serving.<br/>
+            <img src="./../images/Fish_Tacos/FT_Mix"
+        </li>
+        <li>Mince half the jalapeño pepper; save other half for later. Toss cabbage, green onions, and minced jalapeño half in remaining sour cream mixture until slaw is well mixed.<br/>
+            <img src="./../images/Fish_Tacos/FT_Minced Jalepeno Pepper"></li>
+        <li>Heat olive oil and remaining jalapeño half in a large skillet over medium heat; swirl oil to coat skillet evenly. Season tilapia fillets with salt and pepper.<br/>
+            <img src="./../images/Fish_Tacos/FT_Season tilapia"></li>
+        <li>Pan-fry fish strips in the skillet in 2 batches until fish is golden brown and easily flaked with a fork, 5 to 6 minutes. Discard jalapeño half.<br/>
+            <img src="./../images/Fish_Tacos/FT_Fry Fish in Skillet"></li>
+        <li>Heat tortillas in the microwave on high until warm, 20 to 30 seconds.</li>
+        <li>Serve fish in warmed tortillas topped with cabbage slaw, reserved sour cream mixture, and cilantro.<br/>
+            <img src="./../images/Fish_Tacos/Fish Taco Platter"></li></li>
+    </ol>
 </body>
 </html>
