--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="./../images/lasagna.webp">
-    <h2>How to Make Lasagna</h2>
     <p>Making lasagna can be time-consuming, but the results are <em>well</em> worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
     </p>
+    <img src="./../images/Lasagna/lasagna.webp">
+    <h2>How to Make Lasagna</h2>
     <h2>Ingredient List</h2>
     <p>Our Family adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, 
         these are the ingredients you'll need to add to your grocery list:
@@ -25,7 +25,7 @@
             <li><strong>Egg:</strong>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
     </p>
-    <h2>How to Make Lasagna Step-By-Step</h2>
+    <h2>Directions</h2>
     <P>Here's a very brief overview of what you can expect when you make homemade lasagna:
         <ol>
             <li>Make the meat sauce</li>
