Add TunaSalad Recipe

--- a/recipes/TunaSalad.html
+++ b/recipes/TunaSalad.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>Tuna Salad</h1>
+    <p>Learn how to make tuna salad with this recipe for a great dish when you are in a hurry. It's very quick and easy to make and tastes great every time!</p>
+    <img src="./../images/TunaSalad/TunaSalad_main">
+    <h2>Ingredient</h2>
+    <ul>
+        <li><strong>white tuna:</strong>1 (5 ounce) can</li>
+        <li><strong>Creamy Salad Dressing:</strong>¼ cup</li>
+        <li><strong>sweet pickle:</strong>1 tablespoon</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Gather the ingredients<br/>
+            <img src="./../images/TunaSalad/Bowl of Tuna Salad">
+        </li>
+        <li>Mash tuna together with creamy salad dressing and relish in a small bowl with a fork.<br/>
+            <img src="./../images/TunaSalad/MashTunaand Cream">
+        </li>
+    </ol>
 </body>
 </html>
