--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin-recipes</h1>
-    <br/>
+    <img src="./images/Odin_chef.jpeg">
     <h2>Menu</h2>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
